# tmc-prototype

./: .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  .release_low  CHANGELOG.rst  CODEOWNERS  Dockerfile  KUBECONFIG  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  code-analysis.sh  dish3_fail.txt  docker-compose.yml  generated_values.yaml  gitlab_values.yaml  pyproject.toml  rcfile  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  testprogram.py  values-deployment.yaml  values-gitlab-ci.yaml
.make/: .release  k8s.mk  (+6 more)
post-deployment/: Makefile  README.md  setup.cfg  test_requirements.txt
post-deployment/resources/: __init__.py
post-deployment/resources/log_consumer/: tracer_helper.py
post-deployment/resources/test_support/: controls.py  controls_low.py  event_waiting.py  fixtures.py  helpers.py  helpers_low.py  logging_decorators.py  persistance_helping.py  state_checking.py  subscribing.py  sync_decorators.py  sync_decorators_low.py  tmc_helpers.py  tmc_helpers_low.py  waiting.py
post-deployment/resources/testing_auth/: values.yaml
post-deployment/tests/: conftest.py
post-deployment/tests/acceptance/: test_TMC_LOW_release.py  test_tmc_low_restart.py
post-deployment/tests/smoke/: test_mvp_clean.py  test_mvp_low_clean.py  test_validate_device_spec.py
ska-tmc/dishleafnode/: requirements-tst.txt  requirements.txt  setup.cfg  setup.py
ska-tmc/dishleafnode/pogo/: DishLeafNode.xmi
ska-tmc/dishmaster/: requirements.txt  setup.cfg  setup.py
ska-tmc/ska-dish-master-mid/: requirements.txt  setup.cfg
ska-tmc/ska-tmc-centralnode-low/: setup.cfg  setup.py
ska-tmc/ska-tmc-cspmasterleafnode-mid/: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
ska-tmc/ska-tmc-cspmasterleafnode-mid/pogo/: CspMasterLeafNode.xmi
ska-tmc/ska-tmc-cspsubarrayleafnode-mid/: README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
ska-tmc/ska-tmc-cspsubarrayleafnode-mid/pogo/: CspSubarrayLeafNode.xmi
ska-tmc/ska-tmc-sdpsubarrayleafnode-mid/: README.rst  setup.cfg  setup.py  ska-tmc-sdpsubarrayleafnode-mid_coverage  tox.ini
ska-tmc/ska-tmc-subarraynode-low/: MANIFEST.in  requirements.txt  setup.cfg  setup.py
ska-tmc/subarraynodelow/: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
src/ska-tmc-centralnode-low/: MANIFEST.in  setup.cfg
src/ska-tmc-dishleafnode-mid/: requirements.txt  setup.cfg
src/ska-tmc-mccsmasterleafnode-low/: setup.cfg  tox.ini
src/ska-tmc-mccssubarrayleafnode-low/: setup.cfg
src/ska-tmc-sdpmasterleafnode-mid/: setup.cfg  setup.py
tmcprototype/CentralNode/: CentralNode.xmi  MANIFEST.in  centralnode_coverage  code-analysis.sh  conftest.py  setup.cfg  setup.py
tmcprototype/CentralNode/CentralNode/: CONST.py  CentralNode.py  __init__.py  __main__.py  release.py
tmcprototype/CentralNode/test/: CentralNode_test.py  central_node_test.py
tmcprototype/CspMasterLeafNode/: CspMasterLeafNode.xmi  README.rst  conftest.py  setup.cfg  setup.py
tmcprototype/CspMasterLeafNode/CspMasterLeafNode/: CONST.py  CspMasterLeafNode.py  __init__.py  __main__.py  release.py
tmcprototype/CspMasterLeafNode/test/: CspMasterLeafNode_test.py
tmcprototype/CspSubarrayLeafNode/: CspSubarrayLeafNode.xmi  MANIFEST.in  README.rst  conftest.py  setup.cfg  setup.py
tmcprototype/CspSubarrayLeafNode/CspSubarrayLeafNode/: CONST.py  CspSubarrayLeafNode.py  __init__.py  __main__.py  release.py
tmcprototype/CspSubarrayLeafNode/test/: CspSubarrayLeafNode_test.py
tmcprototype/DishLeafNode/: DishLeafNode.xmi  README.rst  code-analysis.sh  conftest.py  setup.cfg  setup.py
tmcprototype/DishLeafNode/DishLeafNode/: CONST.py  DishLeafNode.py  __init__.py  release.py
tmcprototype/DishLeafNode/test/: DishLeafNode_test.py
tmcprototype/DishMaster/: DishMaster.xmi  code-analysis.sh  conftest.py  setup.cfg  setup.py
tmcprototype/DishMaster/DishMaster/: CONST.py  DishMaster.py  __init__.py  __main__.py  release.py
tmcprototype/DishMaster/test/: DishMaster_test.py
tmcprototype/SdpMasterLeafNode/: CONST.py  MANIFEST.in  README.rst  SdpMasterLeafNode.xmi  conftest.py  setup.cfg  setup.py
tmcprototype/SdpMasterLeafNode/SdpMasterLeafNode/: CONST.py  SdpMasterLeafNode.py  __init__.py  __main__.py  release.py
tmcprototype/SdpMasterLeafNode/test/: SdpMasterLeafNode_test.py
tmcprototype/SdpSubarrayLeafNode/: MANIFEST.in  README.rst  SdpSubarrayLeafNode.xmi  conftest.py  setup.cfg  setup.py
tmcprototype/SdpSubarrayLeafNode/SdpSubarrayLeafNode/: CONST.py  SdpSubarrayLeafNode.py  __init__.py  __main__.py  release.py
tmcprototype/SdpSubarrayLeafNode/test/: SdpSubarrayLeafNode_test.py
tmcprototype/SubarrayNode/: MANIFEST.in  README.rst  SubarrayNode.xmi  code-analysis.sh  conftest.py  rcfile  setup.cfg  setup.py
tmcprototype/SubarrayNode/SubarrayNode/: CONST.py  SubarrayNode.py  __init__.py  __main__.py  release.py
tmcprototype/SubarrayNode/test/: SubarrayNode_test.py  testlogs_testcontext17Sept_withAll properties.logs  testlogs_testcontext17Sept_withoutOneProperty.logs  testlogs_testcontext_6Sept.logs
tmcprototype/centralnode/: MANIFEST.in  README.rst  centralnode_coverage  conftest.py  requirements.txt  setup.cfg  setup.py  tox.ini
tmcprototype/centralnode/pogo/: CentralNode.xmi
tmcprototype/centralnode/src/: __init__.py  central_node.py
tmcprototype/centralnode/test/: CentralNode_test.py  conftest.py  test_central_node.py
tmcprototype/centralnodelow/: MANIFEST.in  README.rst  centralnodelow_coverage  requirements-tst.txt  requirements.txt  setup.cfg  setup.py  tox.ini
tmcprototype/centralnodelow/pogo/: CentralNodeLow.xmi
tmcprototype/centralnodelow/test/: conftest.py  test_central_node.py
tmcprototype/cspmasterleafnode/: MANIFEST.in  README.rst  conftest.py  cspmasterleafnode_coverage  requirements.txt  setup.cfg  setup.py  tox.ini
tmcprototype/cspsubarrayleafnode/: MANIFEST.in  README.rst  conftest.py  cspsubarrayleafnode_coverage  requirements.txt  setup.cfg  setup.py
tmcprototype/dishleafnode/: MANIFEST.in  README.rst  conftest.py  requirements-tst.txt  requirements.txt  setup.cfg  setup.py  tox.ini
(+2020 files in other folders)
