[tool.poetry]
name = "ska-tmc"
version = "0.8.8"
description = "SKA-TMC"
authors = ["Team NCRA"]
license = "BSD-3-Clause"

packages = [
    { include = "ska_tmc_sdpsubarrayleafnode", from = "src" },
    { include = "ska_tmc_sdpmasterleafnode", from = "src" },
]
include = [
    { path = 'tests'}
]

[tool.poetry.scripts]
SdpSubarrayLeafNodeDS = 'ska_tmc_sdpsubarrayleafnode.sdp_subarray_leaf_node:main'
SdpMasterLeafNodeDS = 'ska_tmc_sdpmasterleafnode.sdp_subarray_leaf_node:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.17.2"
pytango = "^9.3.3"
jsonschema = ">=4.0.1"
marshmallow = "^3.13.0"
ska-ser-log-transactions = "0.2.2+ae0f5c92"
ska-tmc-cdm = "6.0.4"
ska-telescope-model = "1.3.1"
fire = "^0.4.0"
ska-tmc-common = "0.1.15"
ska-ser-logging = "^0.4.1"
ska-tango-base = "0.11.3+5e1f0fee"
astropy = "^4.1"
katpoint = "1.0a1"
pytz = "2021.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-bdd = "^5.0.0"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^1.34.0"
pytest-repeat = "^0.9.1"
mock = "^4.0.3"
tango-simlib = "^0.9.2"
unittest2 = "1.1.0"
datetime = "4.3"
ska-dish-master-mid = "0.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
