[tool.poetry]
name = "ska-tmc-sdpleafnodes"
version = "0.10.1"
description = "SKA-TMC-SDPLEAFNODES"
authors = ["Team HIMALAYA" , "Team SAHYADRI"]
license = "BSD-3-Clause"

packages = [
    { include = "ska_tmc_sdpsubarrayleafnode", from = "src" },
    { include = "ska_tmc_sdpmasterleafnode", from = "src" },
]
include = [
    { path = 'tests'}
]

[tool.poetry.scripts]
SdpSubarrayLeafNodeDS = 'ska_tmc_sdpsubarrayleafnode.sdp_subarray_leaf_node:main'
SdpMasterLeafNodeDS = 'ska_tmc_sdpmasterleafnode.sdp_master_leaf_node:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.0"
pytango = "9.3.3"
jsonschema = "^4.0.1"
marshmallow = "^3.13.0"
ska-ser-log-transactions = "*"
ska-tmc-cdm = "*"
ska-telescope-model = "1.3.1"
fire = "^0.4.0"
ska-tmc-common = "0.1.63"
ska-ser-logging = "^0.4.1"
ska-tango-base = "0.11.3+5e1f0fee"
astropy = "^5.0.4"
katpoint = "1.0a1"
pytz = "2021.3"
ipython = "8.5.0"
ska-tango-testing = "0.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.0"
pytest = "^7.1"
pytest-bdd = "^5.0.0"
pytest-cov = "^2.10.1"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.4.0"
pytest-repeat = "^0.9.1"
mock = "^4.0.3"
unittest2 = "1.1.0"
datetime = "4.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"