[tool.poetry]
name = "ska-tmc-sdpleafnodes"
version = "0.21.3"
description = "SKA-TMC-SDPLEAFNODES"
authors = ["Team HIMALAYA" , "Team SAHYADRI"]
license = "BSD-3-Clause"

packages = [
    { include = "ska_tmc_sdpsubarrayleafnode", from = "src" },
    { include = "ska_tmc_sdpmasterleafnode", from = "src" },
]
include = [
    { path = 'tests'}
]

[tool.poetry.scripts]
SdpSubarrayLeafNodeDS = 'ska_tmc_sdpsubarrayleafnode.sdp_subarray_leaf_node:main'
SdpMasterLeafNodeDS = 'ska_tmc_sdpmasterleafnode.sdp_master_leaf_node:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.23.0"
pytango = "9.5.0"
jsonschema = "^4.0.1"
marshmallow = "^3.13.0"
ska-ser-log-transactions = "*"
ska-tmc-cdm = "*"
fire = "^0.6.0"
ska-tmc-common = { git = "https://gitlab.com/ska-telescope/ska-tmc/ska-tmc-common", branch = "hm-639" }
ska-ser-logging = "^0.4.1"
ska-tango-base = "1.2.0"
astropy = "^5.0.4"
katpoint = "1.0a2"
pytz = "2021.3"
ipython = "8.5.0"
ska-tango-testing = "0.6.1"
typing_extensions  = "^4.10.0"

[tool.poetry.group.docs.dependencies]
docutils = "^0.18.1"
Sphinx = "^5.1.1"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.19.3"
sphinxcontrib-plantuml = "^0.22"
sphinx-rtd-theme = "^1.2.2"
MarkupSafe = "3.0.2"

[tool.poetry.dev-dependencies]
pylint = "^3.1.0"
pytest = "^7.1"
pytest-bdd = "^5.0.0"
pytest-cov = "^2.10.1"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.4.0"
pytest-repeat = "^0.9.1"
mock = "^4.0.3"
unittest2 = "1.1.0"
datetime = "4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"