[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = tmcprototype

[tool:pytest]
testpaths = test
addopts = --cov=tmcprototype
          --json-report
          --json-report-file=htmlcov/reports.json
          --cov-report=term
          --cov-report=html
          --cov-report=xml
          --junitxml=/build/reports/unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning