[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True

[tool:pytest]
collect_ignore_glob = ['*_dev.py']
log_cli = True
junit_family=xunit1
log_cli_level = INFO
log_file = pytest-logs.txt
log_file_level = INFO
testpaths = tests
addopts = --json-report --json-report-file=report.json --junitxml=report.xml --cucumberjson=cucumber.json
markers =
    slow: marks tests as slow
    medium: marks tests as medium
    fast: marks tests as fast
    last: test will be forced to run last
    first: test will be forced to run first
    regression: mark test as regression test
    select: mark a test for a sub selection, to run only partial tests
bdd_features_base_dir = features                    


# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
