[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = dishmaster
data_file = dishmaster_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test
addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/dishmaster-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/dishmaster_htmlcov
          --cov-report xml:../../build/reports/dishmaster-code-coverage.xml
          --cov=dishmaster
          --junitxml=../../build/reports/dishmaster-unit-tests.xml
          --dist loadscope --numprocesses auto

filterwarnings =
    ignore::DeprecationWarning
