[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-dish-master-mid
data_file = ska-dish-master-mid_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test
addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-dish-master-mid-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska-dish-master-mid_htmlcov
          --cov-report xml:../../build/reports/ska-dish-master-mid-code-coverage.xml
          --cov=ska_dish_master_mid
          --junitxml=../../build/reports/ska-dish-master-mid-unit-tests.xml
          --dist loadscope --numprocesses auto

filterwarnings =
    ignore::DeprecationWarning
