[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska_tmc_centralnode_low
data_file = ska_tmc_centralnode_low_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska_tmc_centralnode_low-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska_tmc_centralnode_low_htmlcov
          --cov-report xml:../../build/reports/ska_tmc_centralnode_low-code-coverage.xml
          --cov=ska_tmc_centralnode_low
          --junitxml=../../build/reports/ska_tmc_centralnode_low-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning
