[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = centralnodelow
data_file = centralnodelow_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/centralnodelow-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/centralnodelow_htmlcov
          --cov-report xml:../../build/reports/centralnodelow-code-coverage.xml
          --cov=centralnodelow
          --junitxml=../../build/reports/centralnodelow-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning
