[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-tmc-cspmasterleafnode-mid
data_file =ska-tmc-cspmasterleafnode-mid_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-tmc-cspmasterleafnode-mid-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska-tmc-cspmasterleafnode-mid_htmlcov
          --cov-report xml:../../build/reports/ska-tmc-cspmasterleafnode-mid-code-coverage.xml
          --cov=ska_tmc_cspmasterleafnode_mid
          --junitxml=../../build/reports/ska-tmc-cspmasterleafnode-mid-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
