[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-tmc-cspsubarrayleafnode-mid
data_file = ska-tmc-cspsubarrayleafnode-mid_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-tmc-cspsubarrayleafnode-mid-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska-tmc-cspsubarrayleafnode-mid_htmlcov
          --cov-report xml:../../build/reports/ska-tmc-cspsubarrayleafnode-mid-code-coverage.xml
          --cov=ska-tmc-cspsubarrayleafnode-mid
          --junitxml=../../build/reports/ska-tmc-cspsubarrayleafnode-mid-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
