[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-tmc-sdpsubarrayleafnode-mid
data_file = ska-tmc-sdpsubarrayleafnode-mid_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-tmc-sdpsubarrayleafnode-mid-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska-tmc-sdpsubarrayleafnode-mid_htmlcov
          --cov-report xml:../../build/reports/ska-tmc-sdpsubarrayleafnode-mid-code-coverage.xml
          --cov=ska_tmc_sdpsubarrayleafnode_mid
          --junitxml=../../build/reports/ska-tmc-sdpsubarrayleafnode-mid-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

filterwarnings =
    ignore::DeprecationWarning
