[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = subarraynode-low
data_file = subarraynodelow_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/subarraynodelow-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/subarraynodelow_htmlcov
          --cov-report xml:.../../build/reports/subarraynodelow-code-coverage.xml
          --cov=subarraynodelow
          --junitxml=../../build/reports/subarraynodelow-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning