[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-tmc-dishleafnode-mid
data_file = ska-tmc-dishleafnode-mid_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-tmc-dishleafnode-mid-report.json
          --cov-report term
          --cov-report html:../../build/reports/ska-tmc-dishleafnode-mid_htmlcov
          --cov-report xml:../../build/reports/ska-tmc-dishleafnode-mid-code-coverage.xml
          --cov=ska_tmc_dishleafnode_mid
          --junitxml=../../build/reports/ska-tmc-dishleafnode-mid-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
