[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-tmc-mccssubarrayleafnode-low
data_file = ska-tmc-mccssubarrayleafnode-low_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-tmc-mccssubarrayleafnode-low-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska-tmc-mccssubarrayleafnode-low_htmlcov
          --cov-report xml:../../build/reports/ska-tmc-mccssubarrayleafnode-low-code-coverage.xml
          --cov=ska_tmc_mccssubarrayleafnode_low
          --junitxml=../../build/reports/ska-tmc-mccssubarrayleafnode-low-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning
