[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = ska-tmc-sdpmasterleafnode-mid
data_file = ska-tmc-sdpmasterleafnode-mid_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/ska-tmc-sdpmasterleafnode-mid-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/ska-tmc-sdpmasterleafnode-mid_htmlcov
          --cov-report xml:../../build/reports/ska-tmc-sdpmasterleafnode-mid-code-coverage.xml
          --cov=ska_tmc_sdpmasterleafnode_mid
          --junitxml=../../build/reports/ska-tmc-sdpmasterleafnode-mid-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

filterwarnings =
    ignore::DeprecationWarning
