# [bdist_rpm]
# release = 1%{?dist}.
# requires = python-pytango
# build_requires = python-setuptools
# [build_sphinx]
# source-dir = docs/source
# build-dir  = docs/build
# all_files  = 1

[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CentralNode

[tool:pytest]
testpaths = test
addopts = --cov=CentralNode --json-report --json-report-file=htmlcov/report.json --cov-report term --cov-report html --cov-report xml --pylint --pylint-error-types=EF

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
builder = html