[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CentralNode
data_file = centralnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=CentralNode
          --cov-report=term
          --junitxml=/build/reports/central-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning