[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CentralNode
data_file = centralnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=CentralNode
          --json-report-file=htmlcov/reports.json
          --cov-report=term
          --cov-report=html

          --junitxml=/build/reports/central-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning