[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CspMasterLeafNode
data_file = cspmasterleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=CspMasterLeafNode
          --cov-report=term
          --junitxml=/build/reports/csp-master-leaf-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning