[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CspSubarrayLeafNode

[tool:pytest]
testpaths = test
addopts = --cov=CspSubarrayLeafNode
          --json-report
          --json-report-file=htmlcov/reports.json
          --cov-report=term
          --cov-report=html
          --cov-report=xml
          -v
filterwarnings =
    ignore::DeprecationWarning


# Define `python setup.py build_sphinx`
#[build_sphinx]
#source-dir = docs/source
#build-dir = docs/build
#all_files = 1
#builder = html