[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CspSubarrayLeafNode
data_file = cspsubarrayleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=CspSubarrayLeafNode
          --json-report-file=htmlcov/reports.json
          --cov-report=term
          --cov-report=html
          --junitxml=/build/reports/csp-subarray-leaf-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning
