[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = DishLeafNode
data_file = dishleafnode_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test
addopts = --cov=DishLeafNode
          --cov-report=term
          --junitxml=/build/reports/dish-leaf-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning