[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = DishMaster
data_file = dishmaster_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test
addopts = --cov=DishMaster
;          --json-report
;          --json-report-file=htmlcov/reports.json
;          --cov-report=term
;          --cov-report=html
;          --cov-report=xml
;          --junitxml=/build/reports/unit-tests.xml
;          --cov-append
          -v
filterwarnings =
    ignore::DeprecationWarning


# Define `python setup.py build_sphinx`
#[build_sphinx]
#source-dir = docs/source
#build-dir = docs/build
#all_files = 1
#builder = html