[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = DishMaster
data_file = dishmaster_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test
addopts = --cov=DishMaster
          --json-report-file=htmlcov/reports.json
          --cov-report=term
          --cov-report=html
          --junitxml=/build/reports/dish-master-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning
