[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = SdpMasterLeafNode
data_file = sdpmasterleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=SdpMasterLeafNode
          --cov-report=term
          --junitxml=/build/reports/sdp-master-leaf-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning