[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = SdpSubarrayLeafNode
data_file = sdpsubarrayleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=SdpSubarrayLeafNode
          --cov-report=term
          --junitxml=/build/reports/sdp-subarray-leaf-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning