[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = SdpSubarrayLeafNode
data_file = sdpsubarrayleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=SdpSubarrayLeafNode
          --json-report-file=htmlcov/reports.json
          --cov-report=term
          --cov-report=html
          --junitxml=/build/reports/sdp-subarray-leaf-node-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning
