[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = SubarrayNode
data_file = subarraynode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
addopts = --cov=SubarrayNode
          --cov-report=term
          --junitxml=/build/reports/subarraynode-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning