[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = centralnode
data_file = centralnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
# --cov is replaced from centralnode to path where package is installed
# to reflect coverage of mocked test cases
; addopts = --cov=/usr/local/lib/python3.7/dist-packages/centralnode
;           --json-report-file=htmlcov/reports.json
;           --cov-report=term
;           --cov-report=html
;           --junitxml=/build/reports/central-node-unit-tests.xml
;           -v

addopts =
          --forked
          --json-report
          --json-report-file=build/reports/centralnode-report.json
          --cov-report term
          --cov-report html:build/htmlcov
          --cov-report xml:build/reports/centralnode-code-coverage.xml
          --cov-report=html:build/reports/centralnode_htmlcov
          --cov=centralnode
          --junitxml=build/reports/centralnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto


console_output_style = progress
junit_family = legacy

[coverage:report]
show_missing = True

; # Define `python setup.py build_sphinx`
; [build_sphinx]
; source-dir = docs/source
; build-dir = docs/build
; all_files = 1
; builder = html

filterwarnings =
    ignore::DeprecationWarning
