[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = centralnode
data_file = centralnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=$REPORTS_DIR_PATH/centralnode-report.json
          --cov-branch
          --cov-report term
          --cov-report html:$REPORTS_DIR_PATH/htmlcov
          --cov-report xml:$REPORTS_DIR_PATH/centralnode-code-coverage.xml
          --cov=centralnode
          --junitxml=$REPORTS_DIR_PATH/centralnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto


console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning
