[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = centralnode
data_file = centralnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/centralnode-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/centralnode_htmlcov
          --cov-report xml:../../build/reports/centralnode-code-coverage.xml
          --cov=centralnode
          --junitxml=../../build/reports/centralnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto


console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning
