[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = centralnodelow
data_file = centralnodelow_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../reports/centralnodelow-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../reports/centralnodelow_htmlcov
          --cov-report xml:../reports/centralnodelow-code-coverage.xml
          --cov=centralnodelow
          --junitxml=../reports/centralnodelow-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto

console_output_style = progress
junit_family = legacy

filterwarnings =
    ignore::DeprecationWarning
