[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = cspmasterleafnode
data_file = cspmasterleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=build/reports/cspmasterleafnode-report.json
          --cov-branch
          --cov-report term
          --cov-report html:build/htmlcov
          --cov-report xml:build/reports/cspmasterleafnode-code-coverage.xml
          --cov=cspmasterleafnode
          --junitxml=build/reports/cspmasterleafnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
