[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = cspmasterleafnode
data_file = cspmasterleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../reports/cspmasterleafnode-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../reports/cspmasterleafnode_htmlcov
          --cov-report xml:../reports/cspmasterleafnode-code-coverage.xml
          --cov=cspmasterleafnode
          --junitxml=../reports/cspmasterleafnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
