[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = cspsubarrayleafnode
data_file = cspsubarrayleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test
# --cov is replaced from cspsubarrayleafnode to path where package is installed
# to reflect coverage of mocked test cases
; addopts = --cov=/usr/local/lib/python3.7/dist-packages/cspsubarrayleafnode
;           --json-report-file=htmlcov/reports.json
;           --cov-report=term
;           --cov-report=html
;           --junitxml=/build/reports/csp-subarray-leaf-node-unit-tests.xml
;           -v
addopts =
          --json-report
          --json-report-file=build/reports/cspsubarrayleafnode-report.json
          --cov-report term
          --cov-report html:build/htmlcov
          --cov-report xml:build/reports/cspsubarrayleafnode-code-coverage.xml
          --cov=cspsubarrayleafnode
          --junitxml=build/reports/cspsubarrayleafnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
