[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = cspsubarrayleafnode
data_file = cspsubarrayleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../reports/cspsubarrayleafnode-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../reports/cspsubarrayleafnode_htmlcov
          --cov-report xml:../reports/cspsubarrayleafnode-code-coverage.xml
          --cov=cspsubarrayleafnode
          --junitxml=../reports/cspsubarrayleafnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
