[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = cspsubarrayleafnode
data_file = cspsubarrayleafnode_coverage
debug = dataio,dataop

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../../build/reports/cspsubarrayleafnode-report.json
          --cov-branch
          --cov-report term
          --cov-report html:../../build/reports/cspsubarrayleafnode_htmlcov
          --cov-report xml:../../build/reports/cspsubarrayleafnode-code-coverage.xml
          --cov=cspsubarrayleafnode
          --junitxml=../../build/reports/cspsubarrayleafnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
