[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = dishleafnode
data_file = dishleafnode_coverage
debug = dataio,dataop

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = test

addopts =
          --forked
          --json-report
          --json-report-file=../reports/dishleafnode-report.json
          --cov-report term
          --cov-report html:../reports/dishleafnode_htmlcov
          --cov-report xml:../reports/dishleafnode-code-coverage.xml
          --cov=dishleafnode
          --junitxml=../reports/dishleafnode-unit-tests.xml
          --verbose
          --dist loadscope --numprocesses auto
filterwarnings =
    ignore::DeprecationWarning
